making the proxy service

--- a/backend/wallet_api/.env.example
+++ b/backend/wallet_api/.env.example
@@ -64,4 +64,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+# Custom environment variables for wallet-db integration
 WALLET_DB_API_KEY=secretapikey
+WALLET_DB_URL=http://localhost:8000/api
